--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ optional = true
 pytest = "^8.3.3"
 pytest-coverage = "^0.0"
 pre-commit = "^3.8.0"
+httpx = "^0.27.2"
 
 [build-system]
 requires = ["poetry-core"]
